thesis: Improvements due to proof-reading by @friedrichschoene

--- a/thesis/defs/acronyms.tex
+++ b/thesis/defs/acronyms.tex
@@ -23,7 +23,7 @@
 \newacronym{ltl}{LTL}{linear temporal logic}
 \newacronym{ctl}{CTL}{computation tree logic}
 \newacronym{api}{API}{application programming interface}
-\newacronym{bdd}{BDD}{boolean decision diagram}
+\newacronym{bdd}{BDD}{Boolean decision diagram}
 \newacronym{psl}{PSL}{property specification language}
 \newacronym{mmu}{MMU}{memory management unit}
 \newacronym{ifc}{IFC}{information flow control}
