--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -76,9 +76,9 @@ Following up on this, it will be described how the MINRV8 architecture was imple
 Chapter \ref{chp:ifc} details what information flow tracking means in context of an \gls{isa}, how specifically it can be applied to MINRV8, and how it was implemented in nuXmv, i.e. it will be discussed how we applied the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} to \glspl{isa} leading finally to the higher-level properties that implement information flow control for the MINRV8 architecture.
 
 The evaluation of our approach is given in chapter \ref{chp:results}-\ref{chp:conclusion}.
-First, the results of the verification process will be presented in chapter \ref{chp:results}.
-These results will then be discussed in chapter \ref{chp:discussion}.
-In chapter \ref{chp:related-work} the results and the approach in general will be compared to related work and in chapter \ref{chp:conclusion}, we will give a final conclusion.
+First, we will present the results of the verification process in chapter \ref{chp:results}.
+Then, we discuss these results in chapter \ref{chp:discussion}.
+In chapter \ref{chp:related-work}, we will compare the results and the approach in general to related work and in chapter \ref{chp:conclusion}, we will give a final conclusion.
 
 \section{Contributions}
 
